Changelog
=========

1.7.0 - unreleased
------------------

* Changed the order of CSS/JS rendering, CSS now renders first to allow the
  browser to get it as soon as possible, to avoid the "flash of unstyled
  content"
  [limi]

* Removed some whitespace in the rendering templates for JS, CSS and KSS to make 
  the source rendering more readable. These are very small and understandable
  templates, so we'd rather have some noise there than on the front end.
  [limi]

* Removed the `autogroupingmode` feature. In practice it turned out to work
  not so well and caused hard to debug problems.
  [hannosch]

* Automatically set the registries into development mode if Zope itself runs
  in development mode.
  [hannosch]

* Get the tests working again under Plone 5 and make sure we handle
  zope.app.publisher file resources correctly under repoze.zope2.
  [hannosch]

* Added missing InitializeClass call for BaseRegistryTool.
  [davisagli]

* Changed default values for resources to more sensible values.
  [hannosch]

* Restructured documentation files.
  [hannosch]

* Added `authenticated` as a new option to all resources. If a resource is
  marked this way, it will only be shown for authenticated users. This makes
  the most common use-case of restricting resources to logged-in users easier
  and allows to optimize the internal API for speed for this use-case. An
  expression on a resource is ignored if the authenticated flag is set.
  [hannosch]

* Removed BBB imports and code. We require Zope 2.12 now.
  [hannosch]

* Handle a missing portal_kss tool gracefully in the kineticstylesheets
  viewlet.
  [hannosch]

* Added BBB imports to make sure the InitializeClass can be imported in
  Zope versions before 2.12.
  [hannosch]

* Avoid dependency on the zope.app.zapi package.
  [hannosch]

* Declare package dependencies, fixed deprecation warnings for use of
  Globals and changed error raising to be forward compatible.
  [hannosch]
